--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Untitled Document</title>
+    <title>tst</title>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="keywords" content="">
-     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
 
+    <link rel="stylesheet" href="css/style.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <div id="container" class="col-xs-9 col-xs-offset-2">
+        <div class="row">
+            <div id="logo" class="col-xs-1"></div>
+            <div id="title" class="col-xs-9 col-xs-offset-1">Chatbot</div>
+        </div>
+        <div class="row">
+            <div id="multibox" class="col-xs-12 ">
+
+                <div id="region" class="col-xs-1"></div>
+                <div id="box_one" class="col-xs-3 col-xs-offset-2"></div>
+                <div id="box_two" class="col-xs-3 col-xs-offset-2"></div>
+
+                <div id="box_three" class="col-xs-3 col-xs-offset-2"></div>
+                <div id="box_four" class="col-xs-3 col-xs-offset-2"></div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div id="box_tchat" class="col-xs-12">
+
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label for="champ">Votre recherche :</label>
+                        <input type="search" class="form-control" id="champ" name="champ" />
+                    </div>
+                    <button type="submit" class="btn btn-danger">Rechercher</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
