--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     <div id="container" class="col-xs-9 col-xs-offset-2">
         <div class="row">
             <div id="logo" class="col-xs-1"></div>
-            <div id="title" class="col-xs-9 col-xs-offset-1">Chatbot</div>
+            <div id="title" class="col-xs-8 col-xs-offset-1">Chatbot</div>
         </div>
         <div class="row">
             <div id="multibox" class="col-xs-12 ">
 
                 <div id="region" class="col-xs-1"></div>
-                <div id="box_one" class="col-xs-3 col-xs-offset-2"></div>
+                <div id="box_one" class="col-xs-3 col-xs-offset-2">
+                    <h4>Timbres</h4>
+                </div>
                 <div id="box_two" class="col-xs-3 col-xs-offset-2"></div>
 
                 <div id="box_three" class="col-xs-3 col-xs-offset-2"></div>
