--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
+
 <body>
+
     <div id="container" class="col-xs-9 col-xs-offset-2">
         <div class="row">
             <div id="logo" class="col-xs-1"></div>
@@ -25,6 +27,10 @@
                 <div id="region" class="col-xs-1"></div>
                 <div id="box_one" class="col-xs-3 col-xs-offset-2">
                     <h4>Timbres</h4>
+
+                    <script type="text/javascript" src="tst.js"></script>
+
+
                 </div>
                 <div id="box_two" class="col-xs-3 col-xs-offset-2"></div>
 
