--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div id="container" class="col-xs-9 col-xs-offset-2">
+    <div id="container" class="col-xs-9 col-xs-offset-1">
         <div class="row">
             <div id="logo" class="col-xs-1"></div>
             <div id="title" class="col-xs-8 col-xs-offset-1">Chatbot</div>
@@ -26,10 +26,16 @@
 
                 <div id="region" class="col-xs-1"></div>
                 <div id="box_one" class="col-xs-3 col-xs-offset-2">
-                    <h4>Timbres</h4>
+                    <div class="panel panel-primary text-center">
+                        <div class="panel-heading">
+                            <h2 class="panel-title">Timbres</h2>
+                        </div>
+                        <div class="panel-body">
 
+                        </div>
+                        <div class="panel-footer">Pied du panel</div>
+                    </div>
                     <script type="text/javascript" src="tst.js"></script>
-
 
                 </div>
                 <div id="box_two" class="col-xs-3 col-xs-offset-2"></div>
