all responsive by Bootsrap v2

--- a/index.html
+++ b/index.html
@@ -22,11 +22,19 @@
             <div id="title" class="col-lg-2 col-lg-offset-4">Chatbot</div>
         </div>
     </header>
+
     <div id="container">
+        <div class="row">
+            <div id=block_region class="hidden-lg  col-xs-6  col-xs-offset-3 ">
+                <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
+                <h5 class="card-title">Région</h5>
+                <p class="card-text">Détails région</p>
+            </div>
+        </div>
         <div class="row">
 
 
-            <div id="box_one" class="col-lg-3 col-lg-offset-1">
+            <div id="block_one" class="col-lg-3 col-lg-offset-1 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">Timbres</h2>
@@ -40,14 +48,14 @@
 
             </div>
 
-            <div id=region class="col-lg-2 col-lg-offset-1 col-xs-offset-0 ">
+            <div id=block_region class=" col-lg-2  col-lg-offset-1 hidden-xs hidden-sm hidden-md ">
                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
                 <h5 class="card-title">Région</h5>
                 <p class="card-text">Détails région</p>
             </div>
 
 
-            <div id="box_two" class="col-lg-3 col-lg-offset-1">
+            <div id="block_two" class="col-lg-3 col-lg-offset-1 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">Timbres</h2>
@@ -62,7 +70,7 @@
     </div>
 
     <div class="row">
-        <div id="box_three" class="col-lg-3 col-lg-offset-1">
+        <div id="block_three" class="col-lg-3 col-lg-offset-1 block">
             <div class="panel panel-primary text-center">
                 <div class="panel-heading">
                     <h2 class="panel-title">Timbres</h2>
@@ -74,7 +82,7 @@
             </div>
         </div>
 
-        <div id="box_four" class="col-lg-3 col-lg-offset-4">
+        <div id="block_four" class="col-lg-3 col-lg-offset-4 block">
             <div class="panel panel-primary text-center">
                 <div class="panel-heading">
                     <h2 class="panel-title">Timbres</h2>
@@ -90,7 +98,7 @@
 
 
     <div class="row">
-        <div id="box_tchat" class="col-lg-10 col-lg-offset-1">
+        <div id="block_tchat" class="col-lg-8 col-lg-offset-2 block">
 
             <form class="form-inline">
                 <div class="form-group">
