--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="container">
         <div class="row">
-            <div id=block_region class="hidden-lg  col-xs-6  col-xs-offset-3 ">
+            <div id=block_region class="hidden-lg  col-xs-8  col-xs-offset-3 ">
                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
                 <h5 class="card-title">Région</h5>
                 <p class="card-text">Détails région</p>
@@ -34,7 +34,7 @@
         <div class="row">
 
 
-            <div id="block_one" class="col-lg-3 col-lg-offset-1 block">
+            <div id="block_one" class="col-lg-3 col-md-2 col-lg-offset-1 col-md-offset-4 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">Timbres</h2>
@@ -42,55 +42,55 @@
                     <div class="panel-body">
 
                     </div>
-                    <div class="panel-footer">Pied du panel</div>
+                    <div class="panel-footer">Tendance</div>
                 </div>
                 <script type="text/javascript" src="tst.js"></script>
 
             </div>
 
-            <div id=block_region class=" col-lg-2  col-lg-offset-1 hidden-xs hidden-sm hidden-md ">
+            <div id=block_region class=" col-lg-2 col-lg-offset-1 hidden-xs hidden-md hidden-sm">
                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
                 <h5 class="card-title">Région</h5>
                 <p class="card-text">Détails région</p>
             </div>
 
 
-            <div id="block_two" class="col-lg-3 col-lg-offset-1 block">
+            <div id="block_two" class="col-lg-3 col-md-2 col-lg-offset-1 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Timbres</h2>
+                        <h2 class="panel-title">PEL</h2>
                     </div>
                     <div class="panel-body">
 
                     </div>
-                    <div class="panel-footer">Pied du panel</div>
+                    <div class="panel-footer">Tendancel</div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="row">
-        <div id="block_three" class="col-lg-3 col-lg-offset-1 block">
+        <div id="block_three" class="col-lg-3 col-md-2 col-lg-offset-1 col-md-offset-4 block">
             <div class="panel panel-primary text-center">
                 <div class="panel-heading">
-                    <h2 class="panel-title">Timbres</h2>
+                    <h2 class="panel-title">Credits immobiliers</h2>
                 </div>
                 <div class="panel-body">
 
                 </div>
-                <div class="panel-footer">Pied du panel</div>
+                <div class="panel-footer">Tendance</div>
             </div>
         </div>
 
-        <div id="block_four" class="col-lg-3 col-lg-offset-4 block">
+        <div id="block_four" class="col-lg-3 col-md-2 col-lg-offset-4 block">
             <div class="panel panel-primary text-center">
                 <div class="panel-heading">
-                    <h2 class="panel-title">Timbres</h2>
+                    <h2 class="panel-title">Forfaits telephone</h2>
                 </div>
                 <div class="panel-body">
 
                 </div>
-                <div class="panel-footer">Pied du panel</div>
+                <div class="panel-footer">Tendance</div>
             </div>
         </div>
 
