--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@
 
     <header>
         <div class="row">
-            <div id="logo" class="col-lg-1">CGI</div>
-            <div id="title" class="col-lg-2 col-lg-offset-4">Chatbot</div>
-        </div>
-    </header>
+            <!--           <div id="logo" class="col-lg-1">CGI</div>-->
+            <div id="title" class="col-lg-2 col-lg-offset-5">Chatbot</div>
 
-    <div id="container">
-        <div class="row">
-            <div id=block_region class="hidden-lg  col-xs-8  col-xs-offset-3 ">
+            <div id=block_region class="col-xs-6 col-md-4 col-md-offset-4 col-xs-offset-3 hidden-lg ">
                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
                 <h5 class="card-title">Région</h5>
                 <p class="card-text">Détails région</p>
             </div>
         </div>
+    </header>
+
+    <div id="container">
         <div class="row">
-
-
-            <div id="block_one" class="col-lg-3 col-md-2 col-lg-offset-1 col-md-offset-4 block">
+            <div id="block_one" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">Timbres</h2>
@@ -47,15 +44,15 @@
                 <script type="text/javascript" src="tst.js"></script>
 
             </div>
-
-            <div id=block_region class=" col-lg-2 col-lg-offset-1 hidden-xs hidden-md hidden-sm">
+            <div id=block_region class="col-md-2 col-lg-2 col-lg-offset-1 col-md-offset-5 col-xs-offset-3 hidden-md hidden-sm ">
                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
                 <h5 class="card-title">Région</h5>
                 <p class="card-text">Détails région</p>
             </div>
 
 
-            <div id="block_two" class="col-lg-3 col-md-2 col-lg-offset-1 block">
+
+            <div id="block_two" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-1 col-md-offset-0 col-sm-offset-1 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">PEL</h2>
@@ -66,39 +63,38 @@
                     <div class="panel-footer">Tendancel</div>
                 </div>
             </div>
+
+            <div id="block_three" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-2 col-md-offset-0 col-sm-offset-1 block">
+                <div class="panel panel-primary text-center">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Credits immo</h2>
+                    </div>
+                    <div class="panel-body">
+
+                    </div>
+                    <div class="panel-footer">Tendance</div>
+                </div>
+            </div>
+
+            <div id="block_four" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-4 col-md-offset-0 col-sm-offset-1 block">
+                <div class="panel panel-primary text-center">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Forfaits tel</h2>
+                    </div>
+
+                    <div class="panel-body">
+
+                    </div>
+                    <div class="panel-footer">Tendance</div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="row">
-        <div id="block_three" class="col-lg-3 col-md-2 col-lg-offset-1 col-md-offset-4 block">
-            <div class="panel panel-primary text-center">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Credits immobiliers</h2>
-                </div>
-                <div class="panel-body">
-
-                </div>
-                <div class="panel-footer">Tendance</div>
-            </div>
-        </div>
-
-        <div id="block_four" class="col-lg-3 col-md-2 col-lg-offset-4 block">
-            <div class="panel panel-primary text-center">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Forfaits telephone</h2>
-                </div>
-                <div class="panel-body">
-
-                </div>
-                <div class="panel-footer">Tendance</div>
-            </div>
-        </div>
-
-    </div>
 
 
     <div class="row">
-        <div id="block_tchat" class="col-lg-8 col-lg-offset-2 block">
+        <div id="block_tchat" class="col-lg-4 col-md-6 col-sm-10 col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-sm-offset-1 block">
 
             <form class="form-inline">
                 <div class="form-group">
@@ -108,8 +104,8 @@
                 <button type="submit" class="btn btn-danger">Rechercher</button>
             </form>
         </div>
-
     </div>
+
 </body>
 
 </html>
