petite retouche block region hidden-xs

--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
                 <script type="text/javascript" src="tst.js"></script>
 
             </div>
-            <div id=block_region class="col-md-2 col-lg-2 col-lg-offset-1 col-md-offset-5 col-xs-offset-3 hidden-md hidden-sm ">
+            <div id=block_region class="col-md-2 col-lg-2 col-lg-offset-1 col-md-offset-5 col-xs-offset-3 hidden-md hidden-sm hidden-xs ">
                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
                 <h5 class="card-title">Région</h5>
                 <p class="card-text">Détails région</p>
             </div>
-
-
 
             <div id="block_two" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-1 col-md-offset-0 col-sm-offset-1 block">
                 <div class="panel panel-primary text-center">
@@ -90,8 +88,6 @@
             </div>
         </div>
     </div>
-
-
 
     <div class="row">
         <div id="block_tchat" class="col-lg-4 col-md-6 col-sm-10 col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-sm-offset-1 block">
