petite retouche responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!--           <div id="logo" class="col-lg-1">CGI</div>-->
             <div id="title" class="col-lg-2 col-lg-offset-5">Chatbot</div>
 
-            <div id=block_region class="col-xs-6 col-md-4 col-md-offset-4 col-xs-offset-3 hidden-lg ">
+            <div id=block_region class="col-sm-8 col-md-4 col-md-offset-4 col-xs-offset-0 col-sm-offset-2 hidden-lg ">
                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg/641px-R%C3%A9gion_Pays-de-la-Loire_%28logo%29.svg.png" alt="logo region">
                 <h5 class="card-title">Région</h5>
                 <p class="card-text">Détails région</p>
@@ -31,7 +31,7 @@
 
     <div id="container">
         <div class="row">
-            <div id="block_one" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 block">
+            <div id="block_one" class="col-sm-2 col-md-2 col-lg-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-2  block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">Timbres</h2>
@@ -50,7 +50,7 @@
                 <p class="card-text">Détails région</p>
             </div>
 
-            <div id="block_two" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-1 col-md-offset-0 col-sm-offset-1 block">
+            <div id="block_two" class="col-sm-2 col-md-2 col-lg-2 col-lg-offset-1 col-md-offset-0 col-sm-offset-0  block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">PEL</h2>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <div id="block_three" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-2 col-md-offset-0 col-sm-offset-1 block">
+            <div id="block_three" class="col-sm-2 col-md-2 col-lg-2 col-lg-offset-2 col-md-offset-0 col-sm-offset-0 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">Credits immo</h2>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div id="block_four" class="col-sm-10 col-md-2 col-lg-2 col-lg-offset-4 col-md-offset-0 col-sm-offset-1 block">
+            <div id="block_four" class="col-sm-2 col-md-2 col-lg-2 col-lg-offset-4 col-md-offset-0 col-sm-offset-0 block">
                 <div class="panel panel-primary text-center">
                     <div class="panel-heading">
                         <h2 class="panel-title">Forfaits tel</h2>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="row">
-        <div id="block_tchat" class="col-lg-4 col-md-6 col-sm-10 col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-sm-offset-1 block">
+        <div id="block_tchat" class="col-lg-4 col-md-6 col-sm-8 col-sm-offset-3 col-md-offset-3 col-lg-offset-4 col-sm-offset-2 block">
 
             <form class="form-inline">
                 <div class="form-group">
