modif by visual code

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="panel-body">
 
                     </div>
-                    <div class="panel-footer">Tendancel</div>
+                    <div class="panel-footer">Tendance</div>
                 </div>
             </div>
 
